# skill-spec

./: .gitignore  README.md  pyproject.toml
.claude/commands/skill-spec/: apply.md  deploy.md  migrate.md  proposal.md
backend/: __init__.py
backend/skillspec/: __init__.py  cli.py  deploy.py  diary.py  i18n.py  migration.py  models.py  preservation.py  report.py
backend/skillspec/logic/: __init__.py  analyzer.py  evaluator.py  parser.py
backend/skillspec/validator/: __init__.py  anthropic_format.py  compliance.py  consistency.py  constraints.py  coverage.py  engine.py  quality.py  schema.py  taxonomy.py
skillspec/: SKILL_AGENTS.md  project.md
skillspec/patterns/: forbidden_patterns_en.yaml  forbidden_patterns_universal.yaml  forbidden_patterns_zh.yaml  scan_scope.yaml  violation_categories.yaml
skillspec/policies/: enterprise-security-v1.yaml  gdpr-compliance-v1.yaml
skillspec/schema/: compliance_report_v1.json  skill_spec_v1.json
skillspec/skills/code-review-assistant/: SKILL.md  spec.yaml
skillspec/skills/detect-layer-violation/: SKILL.md  spec.yaml
skillspec/skills/document-generator/: SKILL.md  spec.yaml
skillspec/skills/extract-api-contract/: SKILL.md  spec.yaml
skillspec/taxonomy/: data-classification-v1.yaml
skillspec/templates/: SKILL.md.en.jinja2  SKILL.md.zh.jinja2  spec.yaml
skillspec/templates/messages/: en.yaml  zh.yaml
tests/: __init__.py  test_constraints.py  test_deploy.py  test_models.py  test_preservation.py  test_report.py  test_validator.py
